feat: userModel -> 프로필, 댓글, 채팅 프로필 이미지 추가